--- a/dashboard/main/templates/index.html
+++ b/dashboard/main/templates/index.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -5,7 +7,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <title>Dashboard | Audispot</title>
 </head>
 
@@ -15,17 +19,17 @@
     <div class="sidebar">
         <a href="#" class="logo">
             <i class='bx bx-code-alt'></i>
-            <div class="logo-name"><span>Audispot</span>254</div>
+            <div class="logo-name"><span>Audi</span>Spot</div>
         </a>
-        <ul class="side-menu">
-            <li><a href="#"><i class='bx bxs-dashboard'></i>Dashboard</a></li>
-            <li><a href="#"><i class='bx bx-store-alt'></i>Shop</a></li>
-            <li class="active"><a href="#"><i class='bx bx-analyse'></i>Analytics</a></li>
+        <ul class="side-menu ps-2">
+            <li><a href="{% url 'index' %}"><i class='bx bxs-dashboard'></i>Dashboard</a></li>
+            <li><a href="{% url 'images_list' %}"><i class='bx bx-calendar-check'></i>Images</a></li>
+            <!-- <li class="active"><a href="#"><i class='bx bx-analyse'></i>Analytics</a></li>
             <li><a href="#"><i class='bx bx-message-square-dots'></i>Tickets</a></li>
             <li><a href="#"><i class='bx bx-group'></i>Users</a></li>
-            <li><a href="#"><i class='bx bx-cog'></i>Settings</a></li>
+            <li><a href="#"><i class='bx bx-cog'></i>Settings</a></li> -->
         </ul>
-        <ul class="side-menu">
+        <ul class="side-menu ps-2">
             <li>
                 <a href="#" class="logout">
                     <i class='bx bx-log-out-circle'></i>
@@ -61,6 +65,7 @@
         <!-- End of Navbar -->
 
         <main>
+            {% block content %}
             <div class="header">
                 <div class="left">
                     <h1>Dashboard</h1>
@@ -69,7 +74,7 @@
                                 Analytics
                             </a></li>
                         /
-                        <li><a href="#" class="active">Shop</a></li>
+                        <li><a href="#" class="active">Audispot</a></li>
                     </ul>
                 </div>
                 <a href="#" class="report">
@@ -197,12 +202,14 @@
                 <!-- End of Reminders-->
 
             </div>
-
+            {% endblock %}
         </main>
 
     </div>
-
-    <script src="index.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+    <script src="{% static 'js/index.js' %}"></script>
 </body>
 
 </html>
