--- a/dashboard/accounts/templates/login.html
+++ b/dashboard/accounts/templates/login.html
@@ -1,33 +1,52 @@
-{% extends './register_customer.html' %}
+<!DOCTYPE html>
+<html lang="en">
 
-{% block content %}
-<div class="align-self-center">
-    <div class="content text-dark text-center p-3">
-        <p class="small"> Fast. Transparent. Honest. </p>
-        <h2 class="text-primary">Welcome, back!</h2>
-        <h5 class="text-dark py-2">Please, sign in with your details to continue....</h5>
-    </div>
-    <div class="py-2">
-        {% if messages %}
-            <div class="text-center">
-                {% for message in messages %}
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+</head>
+
+<body>
+    <div class="d-flex justify-content-center align-items-center vh-100">
+        <div class="align-self-center m-auto border rounded p-3" style="width: 400px;">
+            <div class="content text-dark text-center">
+
+                {% if messages %}
+                <div class="text-danger">
+                    {% for message in messages %}
+                    <p class="small">{{message}}</p>
+                    {% endfor %}
+                </div>
+                {% endif %}
+
+                <h2 class="text-primary">Welcome, back!</h2>
+                <h5 class="text-dark py-2">Please, sign in with your details to continue....</h5>
+                {% if messages %}
+                <div class="text-center">
+                    {% for message in messages %}
                     {% if message.error %}
-                        <p class="text-danger">{{message}}</p>
+                    <p class="text-danger">{{message}}</p>
                     {% endif %}
-                {% endfor %}
+                    {% endfor %}
+                </div>
+                {% endif %}
             </div>
-        {% endif %}
+            <form method="POST" action="{% url 'login' %}">
+                {% csrf_token %}
+                <div class="mb-3">
+                    {{ form.email }}
+                </div>
+                <div class="mb-3">
+                    {{ form.password }}
+                </div>
+                <button type="submit" class="btn btn-dark w-100 mb-3">Sign In</button>
+                </p>
+            </form>
+        </div>
     </div>
-    <form method="POST" action="{% url 'login' %}">
-        {% csrf_token %}
-        <div class="mb-3">
-            {{ form.email }}
-        </div>
-        <div class="mb-3">
-            {{ form.password }}
-        </div>
-        <button type="submit" class="btn btn-dark w-100 mb-3">Sign In</button>
-        </p>
-    </form>
-</div>
-{% endblock %}
+</body>
+
+</html>
