--- a/dashboard/main/templates/index.html
+++ b/dashboard/main/templates/index.html
@@ -31,7 +31,7 @@
         </ul>
         <ul class="side-menu ps-2">
             <li>
-                <a href="#" class="logout">
+                <a href="{% url 'logout' %}" class="logout">
                     <i class='bx bx-log-out-circle'></i>
                     Logout
                 </a>
